--- a/index.html
+++ b/index.html
@@ -244,58 +244,164 @@
       #clear-all-comments-btn:hover {
         background: #bbb;
       }
-
-      /* Bubbles styling for messages */
+      /* Overall styling for the message container */
       #messages {
         list-style: none;
         margin: 0;
-        padding: 0;
-        flex: 1; /* let it grow */
+        padding: 16px;
+        flex: 1;
         overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 12px; /* Space between messages */
+        background: #f5f5f5;
+        font-family: "Arial", sans-serif;
       }
+
+      /* Individual message styling */
       .message-item {
-        margin-bottom: 8px;
         display: flex;
         align-items: flex-end;
         justify-content: flex-start;
       }
+
+      .message-item.sent {
+        justify-content: flex-end;
+      }
+
       .message-content {
-        max-width: 70%;
-        padding: 8px 12px;
-        border-radius: 16px;
+        max-width: 75%;
+        padding: 12px 16px;
+        border-radius: 18px;
         position: relative;
-        font-size: 14px;
-        line-height: 1.4;
-        background: #e1eafc;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        /* Make sure long text doesn't overflow */
-        white-space: pre-wrap;
+        font-size: 16px;
+        line-height: 1.5;
+        background: linear-gradient(
+          135deg,
+          #d1eaff,
+          #a3d8ff
+        ); /* Gradient bubble */
+        color: #000;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
         word-wrap: break-word;
         overflow-wrap: break-word;
+        transition: transform 0.2s ease, background 0.3s ease;
       }
+
+      /* Add slight animation on hover */
+      .message-content:hover {
+        transform: scale(1.02);
+        background: linear-gradient(135deg, #c0dbff, #8bc7ff);
+      }
+
+      /* Styling for received messages */
+      .message-item.received .message-content {
+        background: #ffffff;
+        border: 1px solid #e6e6e6;
+      }
+
+      /* Rounded corners adjustment for alignment */
+      .message-item.sent .message-content {
+        border-top-right-radius: 4px;
+      }
+      .message-item.received .message-content {
+        border-top-left-radius: 4px;
+      }
+
+      /* Timestamp or user info */
       .message-user {
-        font-weight: 600;
-        margin-bottom: 4px;
-        color: #333;
+        font-size: 12px;
+        color: #666;
+        margin-bottom: 6px;
+        text-align: left;
       }
+
+      /* Optional action buttons for messages */
       .message-options {
         margin-left: 8px;
         display: flex;
         flex-direction: column;
-        gap: 4px;
+        gap: 6px;
       }
+
       .msg-btn {
-        background: #bbb;
+        background: #4a90e2;
         border: none;
-        border-radius: 6px;
+        border-radius: 8px;
         color: #fff;
         font-size: 12px;
-        padding: 4px 6px;
+        padding: 6px 8px;
         cursor: pointer;
-        transition: background 0.2s ease;
+        transition: background 0.2s ease, transform 0.2s ease;
       }
+
       .msg-btn:hover {
-        background: #999;
+        background: #357ab7;
+        transform: translateY(-2px);
+      }
+
+      /* Responsive tweaks for smaller screens */
+      @media screen and (max-width: 600px) {
+        .message-content {
+          max-width: 90%;
+          font-size: 14px;
+          padding: 10px 14px;
+        }
+      }
+      /* Scroll-to-bottom button */
+      #scroll-to-bottom {
+        position: fixed;
+        bottom: 16px;
+        right: 16px;
+        background: #4a90e2;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        z-index: 1000;
+      }
+
+      #scroll-to-bottom.visible {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      #scroll-to-bottom::before {
+        content: "↓";
+        font-size: 18px;
+        font-weight: bold;
+      }
+
+      /* Responsive adjustments */
+      @media screen and (max-width: 600px) {
+        .message-item {
+          font-size: 14px;
+          padding: 12px;
+        }
+        #scroll-to-bottom {
+          width: 36px;
+          height: 36px;
+        }
+      }
+      /* Responsive adjustments */
+      @media screen and (max-width: 600px) {
+        .message-item {
+          font-size: 14px;
+          padding: 12px;
+        }
+        #scroll-to-bottom {
+          width: 36px;
+          height: 36px;
+        }
       }
 
       /* Typing indicator bubble */
@@ -312,64 +418,118 @@
         margin-right: 6px;
       }
 
-      /* Comments List in sidebar */
+      /* Styling for the comments section */
       h3.comments-title {
         margin-top: 24px;
-        font-size: 16px;
-        border-top: 1px solid #ccc;
+        font-size: 18px;
+        font-weight: bold;
+        color: #444;
+        border-top: 2px solid #ddd;
         padding-top: 12px;
+        text-align: center;
       }
+
       #comments {
         list-style: none;
         margin: 0;
         padding: 0;
         flex: 0; /* comments won't flex */
+        background: #f9f9f9;
+        border-radius: 12px;
+        padding: 16px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
+
+      /* Individual comment styling */
       #comments li {
-        padding: 10px;
+        padding: 16px;
         margin-bottom: 12px;
-        background: #ffffff;
-        border: 1px solid #ddd;
-        border-radius: 6px;
+        background: linear-gradient(135deg, #ffffff, #f0f0f0);
+        border: 1px solid #ccc;
+        border-radius: 12px;
         position: relative;
-        font-size: 14px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        /* Make sure long text doesn't overflow */
-        white-space: pre-wrap;
+        font-size: 15px;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s ease, box-shadow 0.3s ease;
         word-wrap: break-word;
         overflow-wrap: break-word;
       }
-      #comments li .comment-text {
-        margin-right: 60px;
+
+      /* Hover effect for comments */
+      #comments li:hover {
+        transform: scale(1.02);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
       }
+
+      /* Comment author styling */
       .comment-author {
-        font-weight: 600;
-        display: block;
-        margin-bottom: 4px;
+        font-weight: bold;
+        font-size: 14px;
+        color: #333;
+        margin-bottom: 6px;
       }
+
+      /* Comment text content */
+      .comment-text {
+        margin-right: 80px;
+        font-size: 14px;
+        line-height: 1.5;
+        color: #555;
+      }
+
+      /* Action buttons for edit and delete */
       .edit-comment,
       .delete-comment {
         position: absolute;
-        top: 10px;
-        background: #888;
+        top: 12px;
         color: #fff;
         border: none;
         cursor: pointer;
-        padding: 4px 6px;
+        padding: 6px 10px;
         font-size: 12px;
-        border-radius: 4px;
-        transition: background 0.2s ease;
+        border-radius: 6px;
+        transition: background 0.2s ease, transform 0.2s ease;
       }
-      .edit-comment:hover,
-      .delete-comment:hover {
-        background: #555;
-      }
+
+      /* Edit button styling */
       .edit-comment {
-        right: 40px;
+        right: 50px;
+        background: #4a90e2;
       }
+
+      .edit-comment:hover {
+        background: #357ab7;
+        transform: translateY(-2px);
+      }
+
+      /* Delete button styling */
       .delete-comment {
-        right: 10px;
+        right: 12px;
         background: #e33f3f;
+      }
+
+      .delete-comment:hover {
+        background: #c12727;
+        transform: translateY(-2px);
+      }
+
+      /* Responsive adjustments */
+      @media screen and (max-width: 600px) {
+        #comments li {
+          font-size: 14px;
+          padding: 12px;
+        }
+        .edit-comment,
+        .delete-comment {
+          font-size: 10px;
+          padding: 4px 8px;
+        }
+        .edit-comment {
+          right: 40px;
+        }
+        .delete-comment {
+          right: 8px;
+        }
       }
 
       /* Real-time selection highlight in the editor */
